--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -11,5 +11,6 @@
         This page will automatically redirect you there when run in the browser
         with `polymer serve --open`.
       -->
+      <icon-toggle></icon-toggle>
   </body>
 </html>
